# catkin_ws

detected_human/: CMakeLists.txt  package.xml
detected_human/src/: detected_human.cpp
diffbot_gazebo/models/actor1/: model.sdf
diffbot_gazebo/models/actor11/: model.sdf
diffbot_gazebo/models/actor12/: model.sdf
diffbot_gazebo/models/actor2/: model.sdf
diffbot_gazebo/models/actor3/: model.sdf
diffbot_gazebo/models/actor4/: model.sdf
diffbot_gazebo/models/actor5/: model.sdf
diffbot_gazebo/models/actor6/: model.sdf
diffbot_gazebo/worlds/: cafe.world  cafe3.world  human_group.world  office_env_large.world  office_env_w.world
diffbot_navigation/config/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  teb_local_planner_params.yaml
diffbot_navigation/launch/: robot.launch  simple_world.launch
diffbot_navigation/maps/: office_env_w.yaml
diffbot_navigation/models/actor/: model.config  model.sdf
diffbot_navigation/rviz/: diffbot_navigation.rviz
diffbot_navigation/worlds/: cafe.world  office.world  people_world.world  simple_world.world  t50_2.world
gazebo_sfm_plugin/include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h
social_navigation/social_navigation_layers/: CMakeLists.txt  CMakeLists0.txt  costmap_plugins.xml  package.xml
social_navigation/social_navigation_layers/include/social_navigation_layers/: GetApproachingPose.h  GetApproachingPoseRequest.h  GetApproachingPoseResponse.h  RecognitionState.h  RobotPosition.h  proxemic_layer.h  social_layer.h
social_navigation/social_navigation_layers/msg/: RecognitionState.msg  RobotPosition.msg
social_navigation/social_navigation_layers/src/: approaching_pose_dsz_node (copy).cpp  approaching_pose_dsz_node.cpp  approaching_pose_dsz_node0.cpp  approaching_pose_dsz_node1.cpp  gazebo_ros_com.cpp  gazebo_ros_communication.cpp  gazebo_ros_communication0.cpp  human_group_layer.cpp  human_group_layer0.cpp  human_object_layer.cpp  mybot_convert_laser_pointcloud.cpp  mybot_send_multi_goals_dsz.cpp  passing_layer.cpp  proxemic_layer.cpp  send_multi_goals_dsz_node.cpp  send_multi_goals_dsz_node_thread.cpp  send_multi_goals_dsz_node_thread15_4_2024.cpp  send_multi_goals_dsz_node_thread_copy14_4_2024.cpp  social_layer.cpp
